Aggiunta select "document_type" nel form

--- a/crud/public/css/app.css
+++ b/crud/public/css/app.css
@@ -38,9 +38,14 @@ main ul li {
   line-height: 40px;
 }
 
-main form input {
+main form input,
+main form select {
   width: 200px;
   margin-bottom: 20px;
+}
+
+main form label {
+  display: block;
 }
 
 footer {
