--- a/crud/resources/sass/app.scss
+++ b/crud/resources/sass/app.scss
@@ -10,10 +10,6 @@ a{
     text-decoration: none;
     color: black;
 
-    &:hover{
-        text-decoration: underline;
-        color: blue;
-    }
 }
 
 .button{
@@ -22,19 +18,25 @@ a{
     background-color: red;
     color: white;
     border: 1px solid orange;
-    margin-top: 50px;
+    margin: 50px 20px;
 }
 main{
     width: 100%;
     text-align: center;
     min-height: calc(100vh - 120px);
     padding: 20px 0;
+    background-color: rgb(240 248 255);
 
     ul{
         list-style: none;
 
         li{
             line-height: 40px;
+            a{
+                &:hover{
+                    color: blue;
+                }
+            }
         }
     }
 
@@ -48,6 +50,11 @@ main{
             display: block;
         }
     }
+}
+header, footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 footer{
